--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,40 @@ body {
     text-align: center;
 }
 
-.main_text {
-    font-size: 36px;
-    line-height: 40px;
-    text-align: center;
-    letter-spacing: 3px;
+.Chart {
+    border: 1px solid #88ff00;
+    margin: 10px;
+    color: #00ccff;
 }
 
-.Chart {
-    border: 1px solid #000000;
-    margin: 10px;
+.form_control {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form_control input[type="text"] {
+    color: #00ccff;
+    height: 40px;
+    width: 300px;
+    border: 1px solid #88ff00;
+    padding-left: 10px;
+    margin: 6px;
+    background: #292832;
+}
+
+.Mistake {
+    background-color: #292832;
+    padding: 20px 30px;
+    color: #7E41EA;
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 20px;
+    text-shadow: 1px 1px rgba(250,250,250,.3);
+    text-align: center;
+}
+
+.form_name {
+    margin-bottom: 25px;
 }
 
