--- a/css/main.css
+++ b/css/main.css
@@ -3,68 +3,56 @@
 }
 
 body {
-    background: #292832;
+    background: #206E7A;
+    color: #fcfcfc;
 }
 
-.Todo {
+.column {
     float: left;
     width: 33.33%;
     padding: 10px;
     height: auto;
-    background: #292832;
+    background: #206E7A;
     text-align: center;
 }
 
-.main_text {
+.Texting {
     font-size: 36px;
     line-height: 40px;
     text-align: center;
     letter-spacing: 3px;
-    color: #00ccff;
 }
 
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-    color: #00ccff;
-}
-
-.Chart {
-    border: 1px solid #88ff00;
+.card {
+    border: 1px solid #000000;
     margin: 10px;
-    color: #00ccff;
-}
-
-.form_control {
+    background-color: #2E8581;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form_control input[type="text"] {
-    color: #00ccff;
-    height: 40px;
-    width: 300px;
-    border: 1px solid #88ff00;
-    padding-left: 10px;
-    margin: 6px;
-    background: #292832;
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.Mistake {
+.error {
     background-color: #292832;
     padding: 20px 30px;
-    color: #7E41EA;
+    color: #2E8581;
     font-size: 17px;
     font-weight: bold;
     line-height: 20px;
-    text-shadow: 1px 1px rgba(250,250,250,.3);
     text-align: center;
 }
 
-.form_name {
+.NameForm {
     margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sub {
@@ -74,13 +62,14 @@ body {
 
 .sub input[type="submit"] {
     width: 300px;
-    background: #88ff00;
+    background: #fcfcfc;
     height: 30px;
-    color: #00ccff;
-    border-radius: 10px;
-    font-size: 15px;
 }
 
 .completed{
-    text-decoration: line-through;
+    background-color: rgb(16, 121, 63);
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
